@@ -3,18 +3,17 @@ package com.ark.center.iam.application.apicategory;
 import com.ark.center.iam.application.apicategory.assembler.ApiCategoryAssembler;
 import com.ark.center.iam.infra.apicategory.repository.db.ApiCategoryDAO;
 import com.ark.center.iam.infra.apicategory.repository.db.ApiCategoryDO;
-import com.ark.center.iam.infra.apicategory.repository.db.ApiCategoryMapper;
 import com.ark.center.iam.model.api.dto.ApiCategoryBaseDTO;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class ApiCategoryQueryService {
 
-    private final ApiCategoryMapper apiCategoryMapper;
     private final ApiCategoryDAO apiCategoryDAO;
 
     private final ApiCategoryAssembler apiCategoryAssembler;
@@ -25,6 +24,6 @@ public class ApiCategoryQueryService {
                 .list()
                 .stream()
                 .map(apiCategoryAssembler::toApiCategoryDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
